--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
@@ -2,20 +2,143 @@ header h3 a, header .brand {
 	display:none !important;
 }
 
-@media screen and (max-device-width: 600px) {
+@media screen and (max-device-width: 1200px) {
 	#maincontent.container {
-		margin-top: 30px;
+		background-image: url('../resources/icons/F7.png);
+		margin-top: 0px;
+		margin-right: 10px;
+                width: 500px;
 	}
+	form .cbi-value-field {
+	margin-left: 65px;
+	width: 20px;
+	}
+	table.cbi-section-table input{
+	width: 110px;
+	}
+	table.cbi-section-table textarea{
+	width: 110px;
+	}
+	table.cbi-section-table select {
+	width: 110px;
+	}
+	form .cbi-value label.cbi-value-title {
+	padding-top: 6px;
+	font-size: 13px;
+	line-height: 18px;
+	width: 20px;
+	text-align: right;
+	color: #404040;
+	}
+	.actions,
+	.cbi-page-actions {
+	background: #f5f5f5;
+	margin-bottom: 18px;
+	padding: 17px 20px 18px 15px;
+	border-top: 1px solid #ddd;
+	-webkit-border-radius: 0 0 3px 3px;
+	-moz-border-radius: 0 0 3px 3px;
+	border-radius: 0 0 3px 3px;
+	text-align: right;
+	}
+
+	.actions .secondary-action,
+	.cbi-page-actions .secondary-action{
+	float: left;
+	}
+
 }
 
 @media screen and (max-device-width: 360px) {
 	#maincontent.container {
-		margin-top: 60px;
+		background-image: url('../resources/icons/F7.png);
+		margin-top: 0px
+		margin-right: 10px;
+                width: 280px;
 	}
+	form .cbi-value-field {
+	margin-left: 65px;
+	width: 20px;
+	}
+	table.cbi-section-table input{
+	width: 110px;
+	}
+	table.cbi-section-table textarea{
+	width: 110px;
+	}
+	table.cbi-section-table select {
+	width: 110px;
+	}
+	form .cbi-value label.cbi-value-title {
+	padding-top: 6px;
+	font-size: 13px;
+	line-height: 18px;
+	width: 20px;
+	text-align: right;
+	color: #404040;
+	}
+	.actions,
+	.cbi-page-actions {
+	background: #f5f5f5;
+	margin-bottom: 18px;
+	padding: 17px 20px 18px 15px;
+	border-top: 1px solid #ddd;
+	-webkit-border-radius: 0 0 3px 3px;
+	-moz-border-radius: 0 0 3px 3px;
+	border-radius: 0 0 3px 3px;
+	text-align: right;
+	}
+
+	.actions .secondary-action,
+	.cbi-page-actions .secondary-action{
+	float: left;
+	}
+	
 }
 
 @media screen and (max-device-width: 200px) {
 	#maincontent.container {
-		margin-top: 230px;
+		background-image: url('../resources/icons/F7.png);
+		margin-top: 0px;
+		margin-right: 10px;
+                width: 150px;
 	}
+	form .cbi-value-field {
+	margin-left: 65px;
+	width: 20px;
+	}
+	table.cbi-section-table input{
+	width: 110px;
+	}
+	table.cbi-section-table textarea{
+	width: 110px;
+	}
+	table.cbi-section-table select {
+	width: 110px;
+	}
+	form .cbi-value label.cbi-value-title {
+	padding-top: 6px;
+	font-size: 13px;
+	line-height: 18px;
+	width: 20px;
+	text-align: right;
+	color: #404040;
+	}
+	.actions,
+	.cbi-page-actions {
+	background: #f5f5f5;
+	margin-bottom: 18px;
+	padding: 17px 20px 18px 15px;
+	border-top: 1px solid #ddd;
+	-webkit-border-radius: 0 0 3px 3px;
+	-moz-border-radius: 0 0 3px 3px;
+	border-radius: 0 0 3px 3px;
+	text-align: right;
+	}
+
+	.actions .secondary-action,
+	.cbi-page-actions .secondary-action{
+	float: left;
+	}
+
 }
